--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,31 @@
 * {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
-  /* margin: 0;
-  background-color: pink;
+  margin: 0;
+  /* background-color: pink; */
   padding: 100px;
-  font-family: 'Helvetica', 'Arial', sans-serif; */
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+.main{
+  background-color: #E5D9B6 ;
+  border-radius: 10%;
+  height: 600px;
+  width: 600px;
+  border-radius: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  }
+.start-button{
+  height:100px;
+  width:500px;
+  font-size: 50px;
+  background-color: blue;
 }
